src/encoded/static/scss/encoded/modules/_charts.scss
/* ... */
.stats-charts-container {

    min-height: 1400px;

    .dropdown-container {
        display: flex;
        align-items: center;
    }

    .dropdown-container.sticky-top {
        top: 40px;
        background-color: #ffffff;
        border-bottom: 1px solid #f4f4f4;
    }

    .area-chart-inner-container {
        position: relative;

        svg {
            cursor: crosshair;
            .right-axis-tick-line {
                pointer-events: none;
            }
        }

        > .chart-tooltip {
            position: absolute;
            pointer-events: none;

            > .line {
                position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                width: 0px;
                border-left: 1px dashed #000;
                pointer-events: none;
            }

            > .line-notch {
                position: absolute;
                pointer-events: none;
                left: -5px;
                width: 11px;
                height: 3px;
                background-color: #333;
                border-radius: 2px;
                margin-top: -1px;
                > .horiz-line-before,
                > .horiz-line-after {
                    position: absolute;
                    top: 1px;
                    height: 0;
                    border-top: 1px solid rgba(0,0,0,0.2);
                    border-top: 1px dashed #000;
                }
                > .horiz-line-after {
                    left: 11px;
                }
                /*
                &::before {
                    content: ' ';
                    display: block;
                    position: relative;
                    width: 2000px;
                    height: 0;
                    border-top: 1px solid rgba(0,0,0,0.2);
                    left: -2000px;
                }
                */
            }

            > .label-bg {
                padding-left: 12px;
                padding-right: 12px;
                padding-top: 8px;
                position: absolute;
                min-width: 175px;
                background-color: rgba(255,255,255,0.8);
                padding-bottom: 9px;
                border-bottom-left-radius: 5px;
                border-bottom-right-radius: 5px;

                > h5 {
                    white-space: nowrap;
                }
                
                table.current-legend {
                    font-size: 0.9rem;
                    width: 100%;
                    tr {
                        > td {
                            padding-top: 0px;
                            padding-bottom: 1px;
                            white-space: nowrap;
                            &.term-name-cell {
                                padding-left: 1px;
                                text-align: left;
                                color: #555;
                            }
                            &.term-name-total {
                                padding-left: 5px;
                                padding-right: 0;
                                font-weight: 600;
                                text-align: right;
                                width: 7%;
                            }
                            &.patch-cell {
                                padding-left: 0;
                                text-align: left;
                                width: 7%;
                                > .color-patch {
                                    border-radius: 50%;
                                }
                            }
                        }
                        &.active {
                            > td.term-name-cell {
                                color: #000;
                                text-shadow: 0 0 0;
                            }
                            > td.patch-cell {
                                .color-patch {
                                    border: 1px solid rgba(0,0,0,0.3);
                                }
                            }
                        }
                    }
                }

                &:not(.to-left){
                    left: 10px;
                    &.has-close-button {
                        text-align: right !important;
                    }
                }
                &.to-left {
                    right: 9px;
                    text-align: right;
                    table {
                        float: right;
                    }
                }
    
            }

            &.requires-click {
                pointer-events: auto !important;
            }
        }
    }

    h3.charts-group-title {
        font-weight: 400;
        margin-top: 40px;
        padding-bottom:10px;
        border-bottom: 2px solid #f4f4f4;
    }
}
/* ... */

